--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "openai": "^3.2.1"
   }
 }
